// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Props custom switcher icon switcher icon 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        >
          <span>
            switcherIconFromNode0-1
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Props custom switcher icon switcher leaf icon 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIcon
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIconFromNode0-1
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIcon
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIconFromNode0-2-1
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIcon
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Props data and aria props renders aria attributes 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    />
  </div>
</div>
`;

exports[`Tree Props data and aria props renders data attributes 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    />
  </div>
</div>
`;

exports[`Tree Props prefixCls 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    />
  </div>
</div>
`;

exports[`Tree Props prefixCls 2`] = `
<div
  class="test-prefix"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    />
  </div>
</div>
`;

exports[`Tree Props showIcon 1`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_close"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__close"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Props showIcon 2`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_close"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Props showIcon 3`] = `
<div
  class="rc-tree"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:36px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          style="display:inline-block;padding-left:18px;user-select:none"
        />
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Props showLine 1`] = `
<div
  class="rc-tree rc-tree-show-line"
  role="tree"
>
  <div>
    <div
      style="display:flex;flex-direction:column"
    />
  </div>
</div>
`;
